# qto-categorizer-ml

./: .buildinfo  .gitignore  Makefile  README.md  genindex.html  index.html  markdown.html  objects.inv  py-modindex.html  pyproject.toml  restructured.html  search.html  searchindex.js  sonar-project.properties
.doctrees/: environment.pickle  index.doctree  markdown.doctree  restructured.doctree
.doctrees/_api/: modules.doctree  qto_categorizer_ml.core.doctree  qto_categorizer_ml.doctree  qto_categorizer_ml.io.doctree  qto_categorizer_ml.jobs.doctree  qto_categorizer_ml.utils.doctree
.github/workflows/: checkers.yml  publication-release.yml  publication-snapshot.yml  sphinxdocs.yml
_api/: modules.html  qto_categorizer_ml.core.html  qto_categorizer_ml.html  qto_categorizer_ml.io.html  qto_categorizer_ml.jobs.html  qto_categorizer_ml.utils.html
_modules/: index.html
_modules/qto_categorizer_ml/: scripts.html  settings.html
_modules/qto_categorizer_ml/core/: metrics.html  models.html  schemas.html
_modules/qto_categorizer_ml/io/: configs.html  datasets.html  registries.html  services.html
_modules/qto_categorizer_ml/jobs/: base.html  inference.html  training.html  transition.html  tuning.html
_modules/qto_categorizer_ml/utils/: searchers.html  signers.html  splitters.html
_sources/: index.rst.txt
_sources/_api/: modules.rst.txt  qto_categorizer_ml.core.rst.txt  qto_categorizer_ml.io.rst.txt  qto_categorizer_ml.jobs.rst.txt  qto_categorizer_ml.rst.txt  qto_categorizer_ml.utils.rst.txt
conf/dev/: inference.yml  training.yml  transition.yml  tuning.yml
conf/local/: inference.yml  training_baseline.yml  training_sklearn_pipeline.yml  transition.yml  tuning.yml
docs/source/: conf.py
env/: base.env  dev.env  local.env
notebooks/: 0_eda.ipynb  0_eda_cleaned.ipynb  0_synchronization.py  1_eda.ipynb  1_exploration.py  2_modeling-cleaned.ipynb  2_modeling.ipynb
src/qto_categorizer_ml/: __init__.py  __main__.py  scripts.py  settings.py
src/qto_categorizer_ml/core/: metrics.py  models.py  schemas.py
src/qto_categorizer_ml/io/: configs.py  datasets.py  registries.py  services.py
src/qto_categorizer_ml/jobs/: __init__.py  base.py  inference.py  training.py  transition.py  tuning.py
src/qto_categorizer_ml/utils/: __init__.py  searchers.py  signers.py  splitters.py
src/tests/: conftest.py  test_scripts.py
src/tests/conf/invalid/: invalid.yml
src/tests/conf/valid/: 0-tuning.yml  1-training.yml  2-transition.yml  3-inference.yml
src/tests/core/: test_models.py  test_schemas.py
src/tests/data/: data-products.csv  outputs.csv  predictions.csv
src/tests/io/: test_configs.py  test_datasets.py  test_registries.py  test_services.py
src/tests/jobs/: test_base.py  test_inference.py  test_training.py
src/tests/utils/: test_searchers.py  test_signers.py  test_splitters.py
tasks/: builders.mk  bumpers.mk  checkers.mk  cleaners.mk  databricks.mk  documenters.mk  executers.mk  formatters.mk  helpers.mk  inits.mk  installers.mk  publishers.mk  reporters.mk
